Avoid flickering when open document

--- a/client/styles/global.less
+++ b/client/styles/global.less
@@ -65,3 +65,7 @@ button {
   background-color: #e0e0e0;
   border-radius: 5px;
 }
+
+.hidden {
+  display: none;
+}
